PARAMETER_STORE must be encrypted

--- a/create_codebuild_project_for_promo-jobs.json
+++ b/create_codebuild_project_for_promo-jobs.json
@@ -21,7 +21,7 @@
             {
                 "name": "WHATEVER",
                 "value": "WHATVALUE",
-                "type": "PARAMETER_STORE"
+                "type": "PLAINTEXT"
             }
         ],
         "privilegedMode": true,
